kubernetes/apps/external/pihole/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
