kubernetes/apps/external/pihole/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: pi-hole.png
    gethomepage.dev/name: Pihole
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/widget.type: pihole
    gethomepage.dev/widget.url: http://pihole.external
    gethomepage.dev/widget.key: ${PIHOLE_TOKEN}
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/app-root: /admin
    hajimari.io/icon: mdi:pihole
    hajimari.io/enable: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "ph.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: external
subsets:
  - addresses:
      - ip: ${PIHOLE_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
